--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Contáctenos</title>
+    <link rel="shortcut icon" href="../img/faviconcontact.ico" type="image/x-icon">
+    <meta name="description" content="Bienvenidos a GAMER WORLD, con nosotros van a obtener los mejores precios, la mejor atención y la forma mas rápida de comprar juegos.">
+    <meta name="keywords" content="juegos, games, ofertas, descuentos, comprar, buy, codigos, pc, ,computadora">
+    <title>GAMER WORLD | Contáctenos</title>
 </head>
 <body>
     <header>
