--- a/pages/faq.html
+++ b/pages/faq.html
@@ -8,7 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Faq</title>
+    <link rel="shortcut icon" href="../img/faviconfaq.ico" type="image/x-icon">
+    <meta name="description" content="Bienvenidos a GAMER WORLD, con nosotros van a obtener los mejores precios, la mejor atención y la forma mas rápida de comprar juegos.">
+    <meta name="keywords" content="juegos, games, ofertas, descuentos, comprar, buy, codigos, pc, computadora">
+    <title>GAMER WORLD | Faq</title>
 </head>
 
 <body>
