--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>Ofertas</title>
+    <link rel="shortcut icon" href="../img/faviconoferta.ico" type="image/x-icon">
+    <meta name="description" content="Bienvenidos a GAMER WORLD, con nosotros van a obtener los mejores precios, la mejor atención y la forma mas rápida de comprar juegos.">
+    <meta name="keywords" content="juegos, games, ofertas, descuentos, comprar, buy, codigos, pc, computadora">
+    <title>GAMER WORLD | Ofertas</title>
 </head>
 <body>
     <header>
