--- a/pages/faq.html
+++ b/pages/faq.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="shortcut icon" href="../img/faviconfaq.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <meta name="description" content="Bienvenidos a GAMER WORLD, con nosotros van a obtener los mejores precios, la mejor atención y la forma mas rápida de comprar juegos.">
     <meta name="keywords" content="juegos, games, ofertas, descuentos, comprar, buy, codigos, pc, computadora">
     <title>GAMER WORLD | Faq</title>
@@ -35,16 +35,17 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <h3>Qué es GAMER WORLD</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, neque temporibus rerum quidem iusto sequi ipsa id sit repellendus, quod recusandae pariatur quia qui eaque porro accusantium numquam error minima?</p>
+                        <h3>¿Qué es GAMER WORLD?</h3>
+                        <p>Somos una plataforma dedicada a la venta de juegos para PC de forma rápida, segura y con el mejor precio posible. Próximamente agregaremos venta de CS:GO skins, Riot Points, Fifa Points y mucho más.</p>
                     </div>
                     <div class="col">
-                        <h3>Razones para usar GAMER WORLD</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A optio vel inventore. Aperiam voluptate ex temporibus, fugit corporis labore, quaerat quasi sed veniam optio porro. Corrupti doloribus dicta praesentium aut?</p>
+                        <h3>Cómo contactar con GAMER WORLD</h3>
+                        <p>Pueden contactar con nosotros de varias formas, una de ellas son nuestras redes sociales (Instagram, Twitter, Discord, etc.) o pueden usar el <a href="./contact.html">formulario</a> que tenemos en nuestra página para resolver sus dudas.</p>
                     </div>
                     <div class="col">
                         <h3>Formas de pago</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, sequi excepturi dolor dolorum officia in rerum totam voluptatum illum consectetur earum, corrupti vitae, sed deleniti error labore beatae aperiam officiis.</p>
+                        <p>Actualmente contamos con los siguientes métodos de pago: PagoFácil/RapiPago, Mercado pago, PayPal, Visa, MasterCard, American Express.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -54,15 +55,15 @@
                 <div class="row">
                     <div class="col">
                         <h3>Reembolsos</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus fuga voluptas necessitatibus enim mollitia laborum blanditiis perspiciatis, earum odit iure delectus quae quisquam, consectetur, dolorum amet. Vel magnam vitae quam!</p>
+                        <p>Puedes solicitar un reembolso por casi cualquier compra en Gamer World. Por la razón que sea. Quizá tu PC no cumple con los requisitos necesarios; quizá compraste un juego por error; quizá jugaste y, tras una hora, simplemente no te gustó.</p>
                     </div>
                     <div class="col">
-                        <h3>Cómo canjear códigos de descuentos</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eaque nam dolor, impedit commodi porro voluptas in, sint quae dicta dolorum expedita perspiciatis eum? Eaque quis molestias minus dolores quam.</p>
+                        <h3>¿Necesito una cuenta para comprar en GAMER WORLD?</h3>
+                        <p>Para nada! Si necesitas hacer una compra rápida lo único que te pedimos es un e-mail valido para poder enviarte lo que compraste. <br>Pero si tienes una cuenta en nuestra pagina vas varias beneficios, como revisar tu historial de compra, el estado de tu compra, ver tus tickets a Soporte y mucho más!.</p>
                     </div>
                     <div class="col">
                         <h3>Cómo regalar juegos a otra persona</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem vitae molestiae eum minima doloribus dolores vero fugit nemo laudantium est, quisquam, nihil laboriosam labore atque ipsa neque praesentium enim laborum?</p>
+                        <p>Para hacer un regalo a un amigo o a un familiar, localiza el juego que quieras regalarle en nuestra tienda y haz clic en el botón <span class="regalofaq">«Añadir al 🛒»</span>. Al momento de proceder al pago, selecciona la opción <span class="regalofaq">«Comprar como regalo»</span> para comprar los artículos de tu carro y regalárselos a un amigo.</p>
                     </div>
                 </div>
             </div>
