--- a/pages/categorias.html
+++ b/pages/categorias.html
@@ -9,7 +9,8 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    <meta name="description" content="Bienvenidos a GAMER WORLD, con nosotros van a obtener los mejores precios, la mejor atención y la forma mas rápida de comprar juegos.">
+    <meta name="description"
+        content="Bienvenidos a GAMER WORLD, con nosotros van a obtener los mejores precios, la mejor atención y la forma mas rápida de comprar juegos.">
     <meta name="keywords" content="juegos, games, ofertas, descuentos, comprar, buy, codigos, pc, computadora">
     <title>GAMER WORLD | Categorías</title>
 </head>
@@ -66,6 +67,36 @@
                     <a href="../index.html">Añadir al 🛒</a>
                 </a>
             </div>
+        </section>
+        <section class="carousel-imgs">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../img/DayZ-1.17.png" class="d-block w-100" alt="juego-day-z">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/reddead2.png" class="d-block w-100" alt="juego-red-dead-redemption-2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/call-duty-modern-warfare-2-2814731.png" class="d-block w-100" alt="juego-call-of-duty-modern-warfare-2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/rustcarousell.png" class="d-block w-100" alt="juego-rust">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Anterior</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Siguiente</span>
+                </button>
+            </div>
+        </section>
+        <section class="juegoscat3">
             <div>
                 <a href="./contact.html">
                     <img src="../img/gtaaaaaaavvvvvvr.jpg" alt="juego-grand-theft-auto-5">
