error-de-tipeo-faq

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="col">
                         <h3>¿Necesito una cuenta para comprar en GAMER WORLD?</h3>
-                        <p>Para nada! Si necesitas hacer una compra rápida lo único que te pedimos es un e-mail valido para poder enviarte lo que compraste. <br>Pero si tienes una cuenta en nuestra pagina vas varias beneficios, como revisar tu historial de compra, el estado de tu compra, ver tus tickets a Soporte y mucho más!.</p>
+                        <p>Para nada! Si necesitas hacer una compra rápida lo único que te pedimos es un e-mail valido para poder enviarte lo que compraste. <br>Pero si tienes una cuenta en nuestra pagina vas a tener varios beneficios, como revisar tu historial de compra, el estado de tu compra, ver tus tickets a Soporte y mucho más!.</p>
                     </div>
                     <div class="col">
                         <h3>Cómo regalar juegos a otra persona</h3>
