--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="./pages/categorias.html">💎Categorías</a></li>
                 <li><a href="./pages/ofertas.html">🛒Ofertas</a></li>
                 <li><a href="./pages/faq.html">🎲FAQ</a></li>
+                <li><a href="">💻Iniciar Sesión</a></li>
             </ul>
         </nav>
     </header>
